--- a/Notes/TSC1 Notes/main.tex
+++ b/Notes/TSC1 Notes/main.tex
@@ -139,19 +139,7 @@ $$
 $$
 If $C$ causes $E$, then $\rho_{EC} > 0$.  Otherwise, i.e.\ $\rho_{EC} \le 0$, the causal influence of the system is {\em undefined}(?).  Causal influence between a pair of time series is accomplished by comparing penchants.
 
-Consider two short time seires $\mathbf{x}=\{x_t\} = \{0,1,2,1,0\}$ and $\mathbf{y}=y_t=x_{t-1}$ (i.e.\ $\{y_t\} = \{0,0,1,2,1\}$.  The time steps are indexed by $t=0,1,2,3,4$.  The joint histogram $H(\mathbf{x}\cap\mathbf{y})$ is given by the following frequency table:
-\begin{center}
-\begin{tabular}{l|ccccc}
- & $x_0$ & $x_1$ & $x_2$ & $x_3$ & $x_4$ \\
- \hline \\
- $y_0$ & 1 & 1 & 1 & 1 & 1\\
- $y_1$ & 1 & 1 & 1 & 1 & 1\\
- $y_2$ & 1 & 1 & 1 & 1 & 1\\
- $y_3$ & 1 & 1 & 1 & 1 & 1\\
- $y_4$ & 1 & 1 & 1 & 1 & 1\\
-\end{tabular}
-\end{center}
-The individual joint probabilities can be found using the frequencies of occurence as
+Consider two short time seires $\mathbf{x}=\{x_t\} = \{0,1,2,1,0\}$ and $\mathbf{y}=y_t=x_{t-1}$ (i.e.\ $\{y_t\} = \{0,0,1,2,1\}$.  The time steps are indexed by $t=0,1,2,3,4$.  The individual joint probabilities can be found using the frequencies of occurence as
 \begin{eqnarray}
 P(y_t=0 \cap x_t = 0) &=& \frac{1}{5}\\
 P(y_t=1 \cap x_t = 0) &=& \frac{1}{5}\\
@@ -200,21 +188,6 @@ $P(x_t=2 | y_t = 1) = \frac{P(y_t=1 \cap x_t = 2)}{P(y_t = 1)} = \frac{1}{2}$ &
 $P(x_t=2 | y_t = 2) = \frac{P(y_t=2 \cap x_t = 2)}{P(y_t = 2)} = 0$ \\
 \end{tabular}
 \end{center}
-Consider the penchant
-$$
-\rho_{xy} = P(x_t = 0 | y_t = 0) - P(x_t = 0 | y_t \neq 0) = \frac{1}{2} - \frac{1}{2} = 0
-$$
-and its partner
-$$
-\rho_{yx} = P(y_t = 0 | x_t = 0) - P(y_t = 0 | x_t \neq 0) = \frac{1}{2} - \frac{1}{2} = 0\;\;.
-$$
-These two values are equal, but they are also only for a single points.  Consider comparing the two time series using mean penchants,
-\begin{eqnarray}
-\langle \rho_{xy} \rangle &=& \frac{1}{9}\left[ \sum_{i=0}^2 \sum_{j=0}^2 \left(P(x_t = i | y_t = j) - P(x_t = i | y_t \neq j)\right)\right] \\
-&=& \frac{1}{9}\left[ 0 + 0 -1 -\frac{1}{2} -\frac{3}{2} +\frac{1}{2} -\frac{1}{2} +\frac{1}{2} -\frac{1}{2}\right] \\
-&=& \frac{1}{3}
-\end{eqnarray}
-and $\langle \rho_{yx} \rangle = \langle \rho_{xy} \rangle$.  This last statement is seen from the table above.  Thus, even the mean penchants are equal and there seems to be no useful conclusions from the penchants regarding causal influence.
 
 The next step is to investigate the difference series: $\mathbf{\delta x} = \delta x_t = x_t - x_{t-1} = \{0,1,1,-1,-1\}$ and $\mathbf{\delta y} =\delta y_t = y_t - y_{t-1} = \{0,0,1,1,-1\}$.  There are now four time series, $\mathbf{x}$, $\mathbf{y}$, $\mathbf{\delta x}$, and $\mathbf{\delta y}$, with six permutations to investigate, $(\mathbf{x},\mathbf{y})$, $(\mathbf{x},\mathbf{\delta y})$, $(\mathbf{\delta x},\mathbf{y})$, $(\mathbf{\delta x},\mathbf{\delta y})$, $(\mathbf{x},\mathbf{\delta x})$, and $(\mathbf{y},\mathbf{\delta y})$.  It has already been determined that no conclusions can be drawn about $(\mathbf{x},\mathbf{y})$.  The following table is for reference in the counting exercises below:
 \begin{center}
@@ -298,22 +271,6 @@ $P(\delta x_t=-1 | x_t = 1) = \frac{1}{2}$ &
 $P(\delta x_t=-1 | x_t = 2) = 0$ \\
 \end{tabular}
 \end{center}
-Thus,
-\begin{eqnarray}
-\langle \rho_{x\delta x} \rangle &=& \frac{1}{9}\left[\left(1-\frac{1}{2}\right)+\left(0-1\right)+\left(0-\frac{1}{2}\right)\right.\\
-& &+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-0\right)\\
-& &\left.+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\right] \\
-&=& \frac{1}{9}\left[\frac{1}{2}-1-\frac{1}{2}-\frac{3}{2}+\frac{1}{2}-\frac{1}{2}-\frac{1}{2}\right] \\
-&=& -\frac{1}{3}
-\end{eqnarray}
-and
-\begin{eqnarray}
-\langle \rho_{\delta x x} \rangle &=& \frac{1}{9}\left[\left(\frac{1}{2}-0\right)+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)\right.\\
-& &+\left(0-\frac{1}{2}\right)+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)\\
-& &\left.+\left(0-\frac{1}{2}\right)+\left(1-\frac{1}{2}\right)+\left(0-1\right)\right] \\
-&=& \frac{1}{9}\left[\frac{1}{2}-\frac{3}{2}-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}+\frac{1}{2}-1\right] \\
-&=& -\frac{1}{3}\;\; .
-\end{eqnarray}
 
 Consider the penchants for $(\mathbf{\delta x},\mathbf{y})$.  The conditional probability table is
 \begin{center}
@@ -343,22 +300,6 @@ $P(y_t=2 | \delta x_t = 1) = 0$ &
 $P(y_t=2 | \delta x_t = -1) = \frac{1}{2}$ \\
 \end{tabular}
 \end{center}
-Thus,
-\begin{eqnarray}
-\langle \rho_{\delta x y} \rangle &=& \frac{1}{9}\left[\left(\frac{1}{2}-0\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{3}{2}\right)\right.\\
-& &+\left(0-\frac{1}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-1\right)\\
-& &\left.+\left(0-\frac{1}{2}\right)+\left(0-1\right)+\left(1-\frac{1}{2}\right)\right] \\
-&=& \frac{1}{9}\left[\frac{1}{2}-\frac{3}{2}-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-1+\frac{1}{2}\right] \\
-&=& -\frac{2}{9}
-\end{eqnarray}
-and
-\begin{eqnarray}
-\langle \rho_{y \delta x} \rangle &=& \frac{1}{9}\left[\left(1-\frac{1}{2}\right)+\left(0-1\right)+\left(0-\frac{1}{2}\right)\right.\\
-& &+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\\
-& &\left.+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-0\right)\right] \\
-&=& \frac{1}{9}\left[-\frac{1}{2}-1-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-\frac{3}{2}+\frac{1}{2}\right] \\
-&=& -\frac{4}{9} \;\;.
-\end{eqnarray}
 
 Consider the penchants for $(\mathbf{\delta x},\mathbf{\delta y})$.  The conditional probability table is
 \begin{center}
@@ -388,22 +329,6 @@ $P(\delta y_t=-1 | \delta x_t = 1) = 0$ &
 $P(\delta y_t=-1 | \delta x_t = -1) = \frac{1}{2}$ \\
 \end{tabular}
 \end{center}
-Thus,
-\begin{eqnarray}
-\langle \rho_{\delta x \delta y} \rangle &=& \frac{1}{9}\left[\left(\frac{1}{2}-0\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{3}{2}\right)\right.\\
-& &+\left(0-\frac{1}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-1\right)\\
-& &\left.+\left(0-\frac{1}{2}\right)+\left(0-1\right)+\left(1-\frac{1}{2}\right)\right] \\
-&=& \frac{1}{9}\left[\frac{1}{2}-\frac{3}{2}-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-1+\frac{1}{2}\right] \\
-&=& -\frac{1}{3}
-\end{eqnarray}
-and
-\begin{eqnarray}
-\langle \rho_{\delta y \delta x} \rangle &=& \frac{1}{9}\left[\left(1-\frac{1}{2}\right)+\left(0-1\right)+\left(0-\frac{1}{2}\right)\right.\\
-& &+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\\
-& &\left.+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-0\right)\right] \\
-&=& \frac{1}{9}\left[\frac{1}{2}-1-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-\frac{3}{2}+\frac{1}{2}\right] \\
-&=& -\frac{1}{3} \;\;.
-\end{eqnarray}
 
 Consider the penchants for $(\mathbf{ x},\mathbf{\delta y})$.  The conditional probability table is
 \begin{center}
@@ -433,6 +358,201 @@ $P(\delta y_t=-1 | x_t = 1) = 0$ &
 $P(\delta y_t=-1 | x_t = 2) = 0$ \\
 \end{tabular}
 \end{center}
+
+Consider the penchants for $(\mathbf{ y},\mathbf{\delta y})$.  The conditional probability table is
+\begin{center}
+\begin{tabular}{c|c|c}
+$P(y_t=0 | \delta y_t = 0) = 1$ &
+$P(y_t=0 | \delta y_t = 1) = 0$ &
+$P(y_t=0 | \delta y_t = -1) = 0$ \\
+
+$P(y_t=1 | \delta y_t = 0) = 0$ &
+$P(y_t=1 | \delta y_t = 1) = \frac{1}{2}$ &
+$P(y_t=1 | \delta y_t = -1) = 1$ \\
+
+$P(y_t=2 | \delta y_t = 0) = 0$ &
+$P(y_t=2 | \delta y_t = 1) = \frac{1}{2}$ &
+$P(y_t=2 | \delta y_t = -1) = 0$ \\
+\hline \\
+$P(\delta y_t=0 | y_t = 0) = 1$ &
+$P(\delta y_t=0 | y_t = 1) = 0$ &
+$P(\delta y_t=0 | y_t = 2) = 0$ \\
+
+$P(\delta y_t=1 | y_t = 0) = 0$ &
+$P(\delta y_t=1 | y_t = 1) = \frac{1}{2}$ &
+$P(\delta y_t=1 | y_t = 2) = 1$ \\
+
+$P(\delta y_t=-1 | y_t = 0) = 0$ &
+$P(\delta y_t=-1 | y_t = 1) = \frac{1}{2}$ &
+$P(\delta y_t=-1 | y_t = 2) = 0$ \\
+\end{tabular}
+\end{center}
+
+We now need the three term joint distributions, so
+\begin{center}
+\begin{tabular}{ccc}
+$P(y_t = 0 \cap x_t = 0 \cap \delta x_t = 0) = \frac{1}{5}$ & $P(y_t = 0 \cap x_t = 0 \cap \delta x_t = 1) =0$ & $P(y_t = 0 \cap x_t = 0 \cap \delta x_t = -1) =0$ \\
+$P(y_t = 0 \cap x_t = 1 \cap \delta x_t = 0) =0$ & $P(y_t = 0 \cap x_t = 1 \cap \delta x_t = 1) = \frac{1}{5}$ & $P(y_t = 0 \cap x_t = 1 \cap \delta x_t = -1) =0$ \\
+$P(y_t = 0 \cap x_t = 2 \cap \delta x_t = 0) =0$ & $P(y_t = 0 \cap x_t = 2 \cap \delta x_t = 1) =0$ & $P(y_t = 0 \cap x_t = 2 \cap \delta x_t = -1) =0$ \\
+$P(y_t = 1 \cap x_t = 0 \cap \delta x_t = 0) =0$ & $P(y_t = 1 \cap x_t = 0 \cap \delta x_t = 1) =0$ & $P(y_t = 1 \cap x_t = 0 \cap \delta x_t = -1) =\frac{1}{5}$ \\
+$P(y_t = 1 \cap x_t = 1 \cap \delta x_t = 0) =0$ & $P(y_t = 1 \cap x_t = 1 \cap \delta x_t = 1) =0$ & $P(y_t = 1 \cap x_t = 1 \cap \delta x_t = -1) =0$ \\
+$P(y_t = 1 \cap x_t = 2 \cap \delta x_t = 0) =0$ & $P(y_t = 1 \cap x_t = 2 \cap \delta x_t = 1) =\frac{1}{5}$ & $P(y_t = 1 \cap x_t = 2 \cap \delta x_t = -1) =0$ \\
+$P(y_t = 2 \cap x_t = 0 \cap \delta x_t = 0) =0$ & $P(y_t = 2 \cap x_t = 0 \cap \delta x_t = 1) =0$ & $P(y_t = 2 \cap x_t = 0 \cap \delta x_t = -1) =0$ \\
+$P(y_t = 2 \cap x_t = 1 \cap \delta x_t = 0) =0$ & $P(y_t = 2 \cap x_t = 1 \cap \delta x_t = 1) =0$ & $P(y_t = 2 \cap x_t = 1 \cap \delta x_t = -1) =\frac{1}{5}$ \\
+$P(y_t = 2 \cap x_t = 2 \cap \delta x_t = 0) =0$ & $P(y_t = 2 \cap x_t = 2 \cap \delta x_t = 1) =0$ & $P(y_t = 2 \cap x_t = 2 \cap \delta x_t = -1) =0$ \\
+\hline \\
+$P(x_t = 0 \cap y_t = 0 \cap \delta y_t = 0) =\frac{1}{5}$ & $P(x_t = 0 \cap y_t = 0 \cap \delta y_t = 1) =0$ & $P(x_t = 0 \cap y_t = 0 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 0 \cap y_t = 1 \cap \delta y_t = 0) =0$ & $P(x_t = 0 \cap y_t = 1 \cap \delta y_t = 1) =0$ & $P(x_t = 0 \cap y_t = 1 \cap \delta y_t = -1) =\frac{1}{5}$ \\
+$P(x_t = 0 \cap y_t = 2 \cap \delta y_t = 0) =0$ & $P(x_t = 0 \cap y_t = 2 \cap \delta y_t = 1) =0$ & $P(x_t = 0 \cap y_t = 2 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 1 \cap y_t = 0 \cap \delta y_t = 0) =\frac{1}{5}$ & $P(x_t = 1 \cap y_t = 0 \cap \delta y_t = 1) =0$ & $P(x_t = 1 \cap y_t = 0 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 1 \cap y_t = 1 \cap \delta y_t = 0) =0$ & $P(x_t = 1 \cap y_t = 1 \cap \delta y_t = 1) =0$ & $P(x_t = 1 \cap y_t = 1 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 1 \cap y_t = 2 \cap \delta y_t = 0) =0$ & $P(x_t = 1 \cap y_t = 2 \cap \delta y_t = 1) =\frac{1}{5}$ & $P(x_t = 1 \cap y_t = 2 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 2 \cap y_t = 0 \cap \delta y_t = 0) =0$ & $P(x_t = 2 \cap y_t = 0 \cap \delta y_t = 1) =0$ & $P(x_t = 2 \cap y_t = 0 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 2 \cap y_t = 1 \cap \delta y_t = 0) =0$ & $P(x_t = 2 \cap y_t = 1 \cap \delta y_t = 1) =\frac{1}{5}$ & $P(x_t = 2 \cap y_t = 1 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 2 \cap y_t = 2 \cap \delta y_t = 0) =0$ & $P(x_t = 2 \cap y_t = 2 \cap \delta y_t = 1) =0$ & $P(x_t = 2 \cap y_t = 2 \cap \delta y_t = -1) =0$ 
+\end{tabular}
+\end{center}
+
+The new conditional distributions are
+\begin{center}
+\begin{tabular}{ccc}
+$P(y_t = 0 | x_t = 0 \cap \delta x_t = 0) = 1$ & $P(y_t = 0 | x_t = 0 \cap \delta x_t = 1) =0$ & $P(y_t = 0 | x_t = 0 \cap \delta x_t = -1) =0$ \\
+$P(y_t = 0 | x_t = 1 \cap \delta x_t = 0) =0$ & $P(y_t = 0 | x_t = 1 \cap \delta x_t = 1) = 1$ & $P(y_t = 0 | x_t = 1 \cap \delta x_t = -1) =0$ \\
+$P(y_t = 0 | x_t = 2 \cap \delta x_t = 0) =0$ & $P(y_t = 0 | x_t = 2 \cap \delta x_t = 1) =0$ & $P(y_t = 0 | x_t = 2 \cap \delta x_t = -1) =0$ \\
+$P(y_t = 1 | x_t = 0 \cap \delta x_t = 0) =0$ & $P(y_t = 1 | x_t = 0 \cap \delta x_t = 1) =0$ & $P(y_t = 1 | x_t = 0 \cap \delta x_t = -1) =1$ \\
+$P(y_t = 1 | x_t = 1 \cap \delta x_t = 0) =0$ & $P(y_t = 1 | x_t = 1 \cap \delta x_t = 1) =0$ & $P(y_t = 1 | x_t = 1 \cap \delta x_t = -1) =0$ \\
+$P(y_t = 1 | x_t = 2 \cap \delta x_t = 0) =0$ & $P(y_t = 1 | x_t = 2 \cap \delta x_t = 1) =1$ & $P(y_t = 1 | x_t = 2 \cap \delta x_t = -1) =0$ \\
+$P(y_t = 2 | x_t = 0 \cap \delta x_t = 0) =0$ & $P(y_t = 2 | x_t = 0 \cap \delta x_t = 1) =0$ & $P(y_t = 2 | x_t = 0 \cap \delta x_t = -1) =0$ \\
+$P(y_t = 2 | x_t = 1 \cap \delta x_t = 0) =0$ & $P(y_t = 2 | x_t = 1 \cap \delta x_t = 1) =0$ & $P(y_t = 2 | x_t = 1 \cap \delta x_t = -1) =1$ \\
+$P(y_t = 2 | x_t = 2 \cap \delta x_t = 0) =0$ & $P(y_t = 2 | x_t = 2 \cap \delta x_t = 1) =0$ & $P(y_t = 2 | x_t = 2 \cap \delta x_t = -1) =0$ \\
+\hline \\
+$P(x_t = 0 | y_t = 0 \cap \delta y_t = 0) =\frac{1}{2}$ & $P(x_t = 0 | y_t = 0 \cap \delta y_t = 1) =0$ & $P(x_t = 0 | y_t = 0 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 0 | y_t = 1 \cap \delta y_t = 0) =0$ & $P(x_t = 0 | y_t = 1 \cap \delta y_t = 1) =0$ & $P(x_t = 0 | y_t = 1 \cap \delta y_t = -1) =1$ \\
+$P(x_t = 0 | y_t = 2 \cap \delta y_t = 0) =0$ & $P(x_t = 0 | y_t = 2 \cap \delta y_t = 1) =0$ & $P(x_t = 0 | y_t = 2 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 1 | y_t = 0 \cap \delta y_t = 0) =\frac{1}{2}$ & $P(x_t = 1 | y_t = 0 \cap \delta y_t = 1) =0$ & $P(x_t = 1 | y_t = 0 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 1 | y_t = 1 \cap \delta y_t = 0) =0$ & $P(x_t = 1 | y_t = 1 \cap \delta y_t = 1) =0$ & $P(x_t = 1 | y_t = 1 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 1 | y_t = 2 \cap \delta y_t = 0) =0$ & $P(x_t = 1 | y_t = 2 \cap \delta y_t = 1) =1$ & $P(x_t = 1 | y_t = 2 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 2 | y_t = 0 \cap \delta y_t = 0) =0$ & $P(x_t = 2 | y_t = 0 \cap \delta y_t = 1) =0$ & $P(x_t = 2 | y_t = 0 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 2 | y_t = 1 \cap \delta y_t = 0) =0$ & $P(x_t = 2 | y_t = 1 \cap \delta y_t = 1) =1$ & $P(x_t = 2 | y_t = 1 \cap \delta y_t = -1) =0$ \\
+$P(x_t = 2 | y_t = 2 \cap \delta y_t = 0) =0$ & $P(x_t = 2 | y_t = 2 \cap \delta y_t = 1) =0$ & $P(x_t = 2 | y_t = 2 \cap \delta y_t = -1) =0$ 
+\end{tabular}
+\end{center}
+
+In general, the penchant can be written using the law of total probability, i.e
+$$
+P(E) = P(E|C)P(C) + P(E|\bar{C})P(\bar{C})\;\;,
+$$
+and Bayes theorem, i.e.\ 
+$$
+P(E|\bar{C}) = P(\bar{C}|E)\frac{P(E)}{P(\bar{C})}\;\;.
+$$
+The probability complement rules yield $P(\bar{C}) = 1-P(C)$ and $P(\bar{C}|E) = 1-P(C|E)$.  Applying Bayes again leads to
+$$
+P(\bar{C}|E) = 1-P(E|C)\frac{P(C)}{P(E)}
+$$
+Thus,
+$$
+P(E|\bar{C}) = \left(1-P(E|C)\frac{P(C)}{P(E)}\right)\frac{P(E)}{1-P(C)}\;\;.
+$$
+This expression implies
+\begin{eqnarray}
+\rho &=& P(E|C)-P(E|\bar{C})\\
+&=& P(E|C)-\left(1-P(E|C)\frac{P(C)}{P(E)}\right)\frac{P(E)}{1-P(C)}\\
+&=& P(E|C)-\frac{P(E)}{1-P(C)}+P(E|C)\frac{P(C)}{1-P(C)}\\
+&=& P(E|C)\left(1+\frac{P(C)}{1-P(C)}\right)-\frac{P(E)}{1-P(C)}\\
+&=& \frac{P(E\cap C)}{P(C)}\left(1+\frac{P(C)}{1-P(C)}\right)-\frac{P(E)}{1-P(C)}\\
+&=& P(E\cap C)\left(\frac{1}{P(C)}+\frac{1}{1-P(C)}\right)-\frac{P(E)}{1-P(C)}\;\;.
+\end{eqnarray}
+
+Consider the cause-effect pair $(E,C)=(x_t=0,y_t=0)$ penchant
+\begin{eqnarray}
+\rho_{xy}^{(1)} &=& P(x_t = 0 | y_t = 0) - P(x_t = 0 | y_t \neq 0)\\
+&=&  P(x_t = 0 | y_t = 0)\left(1+\frac{P(y_t = 0)}{1-P(y_t = 0)}\right)-\frac{P(x_t = 0)}{1-P(y_t = 0)}\\
+&=& \frac{1}{2}\left(1+\frac{2}{5}\left(1-\frac{2}{5}\right)^{-1}\right)-\frac{2}{5}\left(1-\frac{2}{5}\right)^{-1}\\
+&=& \frac{1}{6}
+\end{eqnarray}
+and its partner
+\begin{eqnarray}
+\rho_{yx}^{(1)} &=& P(y_t = 0 | x_t = 0) - P(y_t = 0 | x_t \neq 0)\\
+&=& P(y_t = 0|x_t = 0)\left(1+\frac{P(x_t = 0)}{1-P(x_t = 0)}\right)-\frac{P(y_t = 0)}{1-P(x_t = 0)}\\
+&=& \frac{1}{2}\left(1+\frac{2}{5}\left(1-\frac{2}{5}\right)^{-1}\right)-\frac{2}{5}\left(1-\frac{2}{5}\right)^{-1}\\
+&=& \frac{1}{6}\;\;.
+\end{eqnarray}
+
+In general, a cause-effect pair $(C,E)$ depends on $P(E|C)$, $P(E)$, and $P(C)$.  Thus, if $P(E|C)=P(C|E)$ and $P(E)=P(C)$, then the $(C,E)$ penchant is equal to the $(E,C)$ penchant.  It follows that $\langle \rho_{xy} \rangle = \langle \rho_{yx} \rangle$ and $\langle \rho_{y\delta y} \rangle = \langle \rho_{\delta yy} \rangle$
+
+$\downarrow\downarrow$$\downarrow\downarrow$$\downarrow\downarrow$I think all of the calculations below this line are suspect.  The problem is that I'm not sure I calculated $P(E|\bar{C})$ correctly.  I believe the tables are fine.  The two main problems I see are that 1. the calculations below do not agree with the derivations immediately and 2. the calculations below do not conserve probability.$\downarrow\downarrow$$\downarrow\downarrow$
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+
+
+Consider the penchant
+$$
+\rho_{xy} = P(x_t = 0 | y_t = 0) - P(x_t = 0 | y_t \neq 0) = \frac{1}{2} - \frac{1}{2} = 0
+$$
+and its partner
+$$
+\rho_{yx} = P(y_t = 0 | x_t = 0) - P(y_t = 0 | x_t \neq 0) = \frac{1}{2} - \frac{1}{2} = 0\;\;.
+$$
+These two values are equal, but they are also only for a single points.  Consider comparing the two time series using mean penchants,
+\begin{eqnarray}
+\langle \rho_{xy} \rangle &=& \frac{1}{9}\left[ \sum_{i=0}^2 \sum_{j=0}^2 \left(P(x_t = i | y_t = j) - P(x_t = i | y_t \neq j)\right)\right] \\
+&=& \frac{1}{9}\left[ 0 + 0 -1 -\frac{1}{2} -\frac{3}{2} +\frac{1}{2} -\frac{1}{2} +\frac{1}{2} -\frac{1}{2}\right] \\
+&=& -\frac{1}{3}
+\end{eqnarray}
+and $\langle \rho_{yx} \rangle = \langle \rho_{xy} \rangle$.  This last statement is seen from the table above.  Thus, even the mean penchants are equal and there seems to be no useful conclusions from the penchants regarding causal influence.
+
+Thus,
+\begin{eqnarray}
+\langle \rho_{x\delta x} \rangle &=& \frac{1}{9}\left[\left(1-\frac{1}{2}\right)+\left(0-1\right)+\left(0-\frac{1}{2}\right)\right.\\
+& &+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-0\right)\\
+& &\left.+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\right] \\
+&=& \frac{1}{9}\left[\frac{1}{2}-1-\frac{1}{2}-\frac{3}{2}+\frac{1}{2}-\frac{1}{2}-\frac{1}{2}\right] \\
+&=& -\frac{1}{3}
+\end{eqnarray}
+and
+\begin{eqnarray}
+\langle \rho_{\delta x x} \rangle &=& \frac{1}{9}\left[\left(\frac{1}{2}-0\right)+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)\right.\\
+& &+\left(0-\frac{1}{2}\right)+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)\\
+& &\left.+\left(0-\frac{1}{2}\right)+\left(1-\frac{1}{2}\right)+\left(0-1\right)\right] \\
+&=& \frac{1}{9}\left[\frac{1}{2}-\frac{3}{2}-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}+\frac{1}{2}-1\right] \\
+&=& -\frac{1}{3}\;\; .
+\end{eqnarray}
+
+Thus,
+\begin{eqnarray}
+\langle \rho_{\delta x y} \rangle &=& \frac{1}{9}\left[\left(\frac{1}{2}-0\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{3}{2}\right)\right.\\
+& &+\left(0-\frac{1}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-1\right)\\
+& &\left.+\left(0-\frac{1}{2}\right)+\left(0-1\right)+\left(1-\frac{1}{2}\right)\right] \\
+&=& \frac{1}{9}\left[\frac{1}{2}-\frac{3}{2}-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-1+\frac{1}{2}\right] \\
+&=& -\frac{1}{3}
+\end{eqnarray}
+and
+\begin{eqnarray}
+\langle \rho_{y \delta x} \rangle &=& \frac{1}{9}\left[\left(1-\frac{1}{2}\right)+\left(0-1\right)+\left(0-\frac{1}{2}\right)\right.\\
+& &+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\\
+& &\left.+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-0\right)\right] \\
+&=& \frac{1}{9}\left[\frac{1}{2}-1-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-\frac{3}{2}+\frac{1}{2}\right] \\
+&=& -\frac{1}{3} \;\;.
+\end{eqnarray}
+
+Thus,
+\begin{eqnarray}
+\langle \rho_{\delta x \delta y} \rangle &=& \frac{1}{9}\left[\left(\frac{1}{2}-0\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{3}{2}\right)\right.\\
+& &+\left(0-\frac{1}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-1\right)\\
+& &\left.+\left(0-\frac{1}{2}\right)+\left(0-1\right)+\left(1-\frac{1}{2}\right)\right] \\
+&=& \frac{1}{9}\left[\frac{1}{2}-\frac{3}{2}-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-1+\frac{1}{2}\right] \\
+&=& -\frac{1}{3}
+\end{eqnarray}
+and
+\begin{eqnarray}
+\langle \rho_{\delta y \delta x} \rangle &=& \frac{1}{9}\left[\left(1-\frac{1}{2}\right)+\left(0-1\right)+\left(0-\frac{1}{2}\right)\right.\\
+& &+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\\
+& &\left.+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-0\right)\right] \\
+&=& \frac{1}{9}\left[\frac{1}{2}-1-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-\frac{3}{2}+\frac{1}{2}\right] \\
+&=& -\frac{1}{3} \;\;.
+\end{eqnarray}
+
 Thus,
 \begin{eqnarray}
 \langle \rho_{x \delta y} \rangle &=& \frac{1}{9}\left[\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\right.\\
@@ -449,6 +569,96 @@ and
 &=& \frac{1}{9}\left[-\frac{3}{2}+\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-1+\frac{1}{2}-\frac{1}{2}\right] \\
 &=& -\frac{1}{3} \;\;.
 \end{eqnarray}
+
+Thus,
+\begin{eqnarray}
+\langle \rho_{y \delta y} \rangle &=& \frac{1}{9}\left[\left(1-0\right)+\left(0-\frac{3}{2}\right)+\left(0-\frac{1}{2}\right)\right.\\
+& &+\left(0-1\right)+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-0\right)\\
+& &\left.+\left(0-1\right)+\left(1-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\right] \\
+&=& \frac{1}{9}\left[1-\frac{3}{2}-\frac{1}{2}-1-\frac{1}{2}+\frac{1}{2}-1+\frac{1}{2}-\frac{1}{2}\right] \\
+&=& -\frac{1}{3}
+\end{eqnarray}
+and
+\begin{eqnarray}
+\langle \rho_{\delta y y} \rangle&=& \frac{1}{9}\left[\left(1-0\right)+\left(0-\frac{3}{2}\right)+\left(0-\frac{1}{2}\right)\right.\\
+& &+\left(0-1\right)+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-0\right)\\
+& &\left.+\left(0-1\right)+\left(1-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\right] \\
+&=& \frac{1}{9}\left[1-\frac{3}{2}-\frac{1}{2}-1-\frac{1}{2}+\frac{1}{2}-1+\frac{1}{2}-\frac{1}{2}\right] \\
+&=& -\frac{1}{3} \;\;.
+\end{eqnarray}
+
+In total, there are six pairs of sets of penchants, each with nine pechants in the set:
+\begin{eqnarray}
+\{\rho_{xy}\} &=& \left\{0,-\frac{1}{2},-\frac{1}{2},0,-\frac{3}{2},\frac{1}{2},-1,\frac{1}{2},-\frac{1}{2}\right\}\\
+\{\rho_{yx}\} &=& \left\{0,-\frac{1}{2},-\frac{1}{2},0,-\frac{3}{2},\frac{1}{2},-1,\frac{1}{2},-\frac{1}{2}\right\}\\
+\{\rho_{x\delta x}\} &=& \left\{\frac{1}{2},-1,-\frac{1}{2},-\frac{3}{2},\frac{1}{2},-\frac{1}{2},-\frac{1}{2}\right\}\\
+\{\rho_{\delta x x}\} &=& \left\{\frac{1}{2},-\frac{3}{2},-\frac{1}{2},-\frac{1}{2},-\frac{1}{2},\frac{1}{2},-1\right\}\\
+\{\rho_{\delta x y}\} &=& \left\{\frac{1}{2},-\frac{3}{2},-\frac{1}{2},-\frac{1}{2},-\frac{1}{2},-1,\frac{1}{2}\right\}\\
+\{\rho_{y \delta x}\} &=& \left\{-\frac{1}{2},-1,-\frac{1}{2},-\frac{1}{2},-\frac{1}{2},-\frac{3}{2},\frac{1}{2}\right\}\\
+\{\rho_{\delta x \delta y} \} &=& \left\{\frac{1}{2},-\frac{3}{2},-\frac{1}{2},-\frac{1}{2},-\frac{1}{2},-1,\frac{1}{2}\right\}\\
+\{\rho_{\delta y \delta x} \} &=& \left\{\frac{1}{2},-1,-\frac{1}{2},-\frac{1}{2},-\frac{1}{2},-\frac{3}{2},\frac{1}{2}\right\} \\
+\{\rho_{x \delta y} \} &=& \left\{-\frac{1}{2},-\frac{1}{2},-\frac{3}{2},\frac{1}{2},\frac{1}{2},-1,-\frac{1}{2}\right\}\\
+\{\rho_{\delta y x} \} &=& \left\{-\frac{3}{2},\frac{1}{2},-\frac{1}{2},-\frac{1}{2},-1,\frac{1}{2},-\frac{1}{2}\right\} \\
+\{\rho_{y \delta y} \} &=& \left\{1,-\frac{3}{2},-\frac{1}{2},-1,-\frac{1}{2},\frac{1}{2},-1,\frac{1}{2},-\frac{1}{2}\right\} \\
+\{\rho_{\delta y y} \} &=& \left\{1,-\frac{3}{2},-\frac{1}{2},-1,-\frac{1}{2},\frac{1}{2},-1,\frac{1}{2},-\frac{1}{2}\right\}
+\end{eqnarray}
+Consider the basic statistics of these twelve sets.
+\begin{center}
+\begin{tabular}{l|c|c|c}
+ & $\langle\rangle$ & $\max{}$ & $\min{}$\\
+\hline
+$\{\rho_{xy}\}$ & $-\frac{1}{3}$ & $\frac{1}{2}$ & $-\frac{3}{2}$\\
+$\{\rho_{yx}\}$ & $-\frac{1}{3}$ & $\frac{1}{2}$ & $-\frac{3}{2}$\\
+$\{\rho_{x\delta x}\}$ & $-\frac{1}{3}$ & $\frac{1}{2}$ & $-\frac{3}{2}$\\
+$\{\rho_{\delta x x}\}$ & $-\frac{1}{3}$ & $\frac{1}{2}$ & $-\frac{3}{2}$\\
+$\{\rho_{\delta x y}\}$ & $-\frac{1}{3}$ & $\frac{1}{2}$ & $-\frac{3}{2}$\\
+$\{\rho_{y \delta x}\}$ & $-\frac{1}{3}$ & $\frac{1}{2}$ & $-\frac{3}{2}$\\
+$\{\rho_{\delta x \delta y} \}$ & $-\frac{1}{3}$ & $\frac{1}{2}$ & $-\frac{3}{2}$\\
+$\{\rho_{\delta y \delta x} \}$ & $-\frac{1}{3}$ & $\frac{1}{2}$ & $-\frac{3}{2}$\\
+$\{\rho_{x \delta y} \}$ & $-\frac{1}{3}$ & $\frac{1}{2}$ & $-\frac{3}{2}$\\
+$\{\rho_{\delta y x} \}$ & $-\frac{1}{3}$ & $\frac{1}{2}$ & $-\frac{3}{2}$\\
+$\{\rho_{y \delta y} \}$ & $-\frac{1}{3}$ & $\frac{1}{2}$ & $-\frac{3}{2}$\\
+$\{\rho_{\delta y y} \}$ & $-\frac{1}{3}$ & $\frac{1}{2}$ & $-\frac{3}{2}$\\
+\end{tabular}
+\end{center}
+This table implies that these pariwise penchants may not be useful for determining the causal influences in this example.  However, these are not the only penchants in this example system.  Consider
+\begin{eqnarray}
+P(y_t = 0 | x_t = 0 \cap \delta x_t = 0) &=& \frac{P(y_t = 0 \cap x_t = 0 \cap \delta x_t = 0)}{P(x_t = 0 \cap \delta x_t = 0)}\\
+&=& \frac{P(y_t = 0 \cap x_t = 0 | \delta x_t = 0)P(\delta x_t = 0)}{P(x_t = 0 | \delta x_t = 0)P(\delta x_t = 0)}\\
+&=& \frac{P(y_t = 0 \cap x_t = 0 | \delta x_t = 0)}{P(x_t = 0 | \delta x_t = 0)}
+\end{eqnarray}
+
+It follows from the table above that 
+$$
+\rho_{yx\delta x}^{(1)} = P(y_t = 0 | x_t = 0 \cap \delta x_t = 0) - P(y_t = 0 | x_t \neq 0 \cap \delta x_t \neq 0) = 1-1 = 0
+$$
+and
+$$
+\rho_{xy\delta y}^{(1)} = P(x_t = 0 | y_t = 0 \cap \delta y_t = 0) - P(x_t = 0 | y_t \neq 0 \cap \delta y_t \neq 0) = \frac{1}{2}-1 = -\frac{1}{2}\;\;.
+$$
+Thus, $\rho_{yx\delta x}^{(1)} > \rho_{xy\delta y}^{(1)}$ implying (at least for this single penchant comparison) $\mathbf{x}\rightarrow\mathbf{y}$.  The mean penchant comparison is
+\begin{eqnarray}
+\langle \rho_{yx\delta x} \rangle &=& \frac{1}{27}\left[2\left(1-1\right)+7\left(0-2\right)+7\left(0-2\right)+2\left(1-1\right)+8\left(0-1\right)+\left(1-0\right)\right]\\
+&=& \frac{1}{27}\left[-14-14-8+1\right]\\
+&=& -\frac{35}{27}
+\end{eqnarray}
+and
+\begin{eqnarray}
+\langle \rho_{xy\delta y} \rangle &=& \frac{1}{27}\left[\left(\frac{1}{2}-1\right)+\left(1-\frac{1}{2}\right)+7\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-1\right)+\left(1-\frac{1}{2}\right)\right.\\
+& & \left. +7\left(0-\frac{3}{2}\right)+8\left(0-1\right)+\left(1-0\right)\right]\\
+&=& \frac{1}{27}\left[-\frac{1}{2}+\frac{1}{2}-\frac{21}{2}-\frac{1}{2}+\frac{1}{2}-\frac{21}{2}-8+1\right]\\
+&=& -\frac{28}{27}\;\;,
+\end{eqnarray}
+which implies $\langle \rho_{yx\delta x} \rangle <\langle \rho_{xy\delta y} \rangle$, i.e.\ $\mathbf{x}\leftarrow\mathbf{y}$, which does not agree with intuition.  
+
+Notice that this conclusion was possible using the mean penchants calculated using three of the four LIR series.  In general, however, casual influence can be estimated using the mean penchants calculated using all four LIR series.  E.g.\
+$$
+\rho_{y\delta yx\delta x}^{(1)} = P(y_t = 0 \cap \delta y_t = 0| x_t = 0 \cap \delta x_t = 0) - P(y_t = 0 \cap \delta y_t = 0| x_t \neq 0 \cap \delta x_t \neq 0)
+$$
+and
+$$
+\rho_{x\delta xy\delta y}^{(1)} = P(x_t = 0 \cap \delta x_t = 0| y_t = 0 \cap \delta y_t = 0) - P(x_t = 0 \cap \delta x_t = 0| y_t \neq 0 \cap \delta y_t \neq 0) \;\;.
+$$
 
 
 \end{document}
